<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:onClick="btnfo2_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_regresar"
                android:background="@drawable/shape_parrafo"
                android:drawableLeft="@drawable/ic_arrowback"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_note"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insertar_medidasC"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pinza_de_busto"/>
            <EditText
                android:id="@+id/etPinBusto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Distancia_de_busto"/>
            <EditText
                android:id="@+id/etDisBusto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Busto"/>
            <EditText
                android:id="@+id/etBusto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Frente"/>
            <EditText
                android:id="@+id/etFrente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Espalda"/>
            <EditText
                android:id="@+id/etEspalda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cintura"/>
            <EditText
                android:id="@+id/etCintura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Talla_frente"/>
            <EditText
                android:id="@+id/etTallaF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Talla_espalda"/>
            <EditText
                android:id="@+id/etTallaE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cadera"/>
            <EditText
                android:id="@+id/etCadera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Largo_de_la_falda"/>
            <EditText
                android:id="@+id/etLarFal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Largo_de_la_manga"/>
            <EditText
                android:id="@+id/etLarMan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Puno_alto"/>
            <EditText
                android:id="@+id/etPunAlto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Puno_bajo"/>
            <EditText
                android:id="@+id/etPunBajo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/Insertar_texto"/>
            <Button
                android:id="@+id/btnsig"
                android:onClick="btn_sig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton_siguiente"
                android:background="@drawable/shape_parrafo"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
