<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:onClick="btnfo_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boton_regresar"
                android:background="@drawable/shape_parrafo"
                android:drawableLeft="@drawable/ic_arrowback"
                android:padding="5dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:focusable="true"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_note"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insertar_datosC"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="4dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Nombre_mama"/>
                    <EditText
                        android:id="@+id/editT_mama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="Insertar texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/NombreU"/>

                    <EditText
                        android:id="@+id/editT_nom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Insertar texto"
                        android:inputType="textPersonName"
                        android:enabled="false"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Fecha_de_pedido"/>

                    <EditText
                        android:id="@+id/etF_Pedido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Fecha_de_evento"/>
                    <EditText
                        android:id="@+id/etF_Evento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="date" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Fecha_de_pruebas"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/etPruebas"
                            android:layout_width="170dp"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:inputType="date" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="a:" />

                        <EditText
                            android:id="@+id/etPruebas2"
                            android:layout_width="170dp"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:inputType="date" />

                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tel"/>
                    <EditText
                        android:id="@+id/etTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:hint="@string/insertar_numero"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color"/>
                    <EditText
                        android:id="@+id/etColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:hint="Insertar texto" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anticipo"/>
                    <EditText
                        android:id="@+id/etAnticipo"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:textAlignment="viewEnd"
                        android:text="@string/cu_pagar"
                        android:gravity="end" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precio"/>
                    <EditText
                        android:id="@+id/etPrecio"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:textAlignment="viewEnd"
                        android:text="@string/cu_pagar"
                        android:gravity="end" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Pinza_de_busto"/>
                    <EditText
                        android:id="@+id/etPinBusto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Distancia_de_busto"/>
                    <EditText
                        android:id="@+id/etDisBusto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Busto"/>
                    <EditText
                        android:id="@+id/etBusto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Frente"/>
                    <EditText
                        android:id="@+id/etFrente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Espalda"/>
                    <EditText
                        android:id="@+id/etEspalda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Cintura"/>
                    <EditText
                        android:id="@+id/etCintura"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Talla_frente"/>
                    <EditText
                        android:id="@+id/etTallaF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Talla_espalda"/>
                    <EditText
                        android:id="@+id/etTallaE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Cadera"/>
                    <EditText
                        android:id="@+id/etCadera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Largo_de_la_falda"/>
                    <EditText
                        android:id="@+id/etLarFal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Largo_de_la_manga"/>
                    <EditText
                        android:id="@+id/etLarMan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Puno_alto"/>
                    <EditText
                        android:id="@+id/etPunAlto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Puno_bajo"/>
                    <EditText
                        android:id="@+id/etPunBajo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:hint="@string/Insertar_texto"/>
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/Caract" />

                    <EditText
                        android:id="@+id/etCaract"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:lines="4"/>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="@string/Telas" />

                    <EditText
                        android:id="@+id/etTelas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:lines="4" />

                    <Button
                        android:id="@+id/saveButton"
                        android:onClick="btnSig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/boton_siguiente"
                        android:background="@drawable/shape_parrafo"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:focusable="true"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
